# tech-job-market-analytics-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dashboard.txt  requirements-pipeline.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
config/: config.py
dashboard/: streamlit_app.py
dashboard/api/: main.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.jsx  api.js  index.css
dashboard/frontend/src/components/: AirflowSection.jsx  LocationCharts.jsx  MetricCards.jsx  SalarySection.jsx  SectionHeader.jsx  Sidebar.jsx  SkillsSection.jsx  WorkModeSection.jsx
data/: clean_jobs.csv
data_ingestion/: fetch_jobs.py
database/: load_data.py  schema.sql
docker/: Dockerfile.airflow  Dockerfile.app  docker-compose.yml
job-market-data-engineering/: .env.example  .gitignore
job-market-data-engineering/config/: config.py
job-market-data-engineering/data/: raw_jobs.csv
job-market-data-engineering/data_ingestion/: fetch_jobs.py
job-market-data-engineering/database/: load_data.py
job-market-data-engineering/docker/: Dockerfile.airflow
job-market-data-engineering/transformations/: extract_skills.py  skill_extraction.py
job-market-data-engineering/utils/: logger.py
pipelines/: airflow_dag.py
tests/: test_api.py  test_config.py  test_skill_extraction.py
transformations/: clean_jobs.py  skill_extraction.py
utils/: logger.py
