[project]
name = "tech-job-market-analytics-pipeline"
version = "1.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"dashboard/streamlit_app.py" = ["E702", "E741"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["config", "data_ingestion", "transformations", "database", "dashboard/api"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 30
